# rc-repro

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: oidc-design.md  seed-design.md
rc_repro/: __init__.py  __main__.py  cli.py  compose.py  config.py  configimport.py  email_preset.py  errors.py  ldap_preset.py  monitoring.py  multi_instance_preset.py  oidc_preset.py  presets.py  rcapi.py  runner.py  s3_minio_preset.py  saml_preset.py  scaleseed.py  seed.py  ui.py  versions.py
rc_repro/data/: versions.yaml
rc_repro/data/loadtest/: badbot.js  common.js  custom.js  journey.js  login.js  messages.js  mixed.js  read.js  webhook.js
rc_repro/data/monitoring/: k6-loadtest.json  rc-repro-logs.json
rc_repro/data/presets/: airgapped.yaml  default.yaml
rc_repro/data/webui/: app.css  app.js  index.html
rc_repro/perf/: __init__.py  baseline.py  constrain.py  k6.py  mongoprof.py  rcmetrics.py  report.py  resources.py  slo.py  timeline.py  timings.py  verdict.py
rc_repro/presets/: __init__.py  _common.py  _keycloak.py  email.py  ldap.py  livechat.py  multi_instance.py  oidc.py  s3_minio.py  saml.py
rc_repro/services/: __init__.py  data.py  events.py  lifecycle.py  monitor.py  perf.py  postready.py
rc_repro/web/: __init__.py  app.py  jobs.py
tests/: conftest.py  test_core.py  test_services.py  test_web.py
