[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rc-repro"
version = "0.4.0"
description = "Launch version-matched Rocket.Chat reproduction environments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "requests>=2.31",
    "PyYAML>=6.0",
    "packaging>=23",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
rc-repro = "rc_repro.cli:app"

[tool.setuptools]
packages = ["rc_repro"]

[tool.setuptools.package-data]
rc_repro = ["data/*.yaml", "data/presets/*.yaml"]
