[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rc-repro"
version = "0.17.0"
description = "Launch version-matched Rocket.Chat reproduction environments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "requests>=2.31",
    "PyYAML>=6.0",
    "packaging>=23",
]

[project.optional-dependencies]
dev = ["pytest>=7", "httpx>=0.27"]
gui = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9"]

[project.scripts]
rc-repro = "rc_repro.cli:app"

[tool.setuptools]
packages = ["rc_repro", "rc_repro.presets", "rc_repro.perf", "rc_repro.services", "rc_repro.web"]

[tool.setuptools.package-data]
rc_repro = ["data/*.yaml", "data/presets/*.yaml", "data/monitoring/*.json", "data/loadtest/*.js", "data/webui/*"]
